--- a/index.html
+++ b/index.html
@@ -2,56 +2,40 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Mythri Web | Web Development</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #0f172a;
-      color: #ffffff;
-      text-align: center;
-    }
-    header {
-      padding: 80px 20px;
-    }
-    h1 {
-      font-size: 42px;
-      margin-bottom: 10px;
-    }
-    p {
-      font-size: 18px;
-      opacity: 0.9;
-    }
-    .btn {
-      display: inline-block;
-      margin-top: 30px;
-      padding: 12px 28px;
-      background: #38bdf8;
-      color: #000;
-      text-decoration: none;
-      font-weight: bold;
-      border-radius: 6px;
-    }
-    footer {
-      margin-top: 80px;
-      padding: 20px;
-      font-size: 14px;
-      opacity: 0.7;
-    }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Mythri Web | Web Development Services</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
 
-  <header>
+  <header class="hero">
     <h1>Mythri Web</h1>
-    <p>Professional Web Development Services</p>
-    <p>Modern websites • Clean design • Fast delivery</p>
-    <a class="btn" href="#">Contact Me</a>
+    <p>I build clean, responsive websites for startups and small businesses.</p>
+    <a href="#contact" class="btn">Contact Me</a>
   </header>
 
+  <section class="section">
+    <h2>Services</h2>
+    <ul>
+      <li>Business Websites</li>
+      <li>Portfolio Websites</li>
+      <li>Landing Pages</li>
+    </ul>
+  </section>
+
+  <section class="section">
+    <h2>Projects</h2>
+    <p>Sample projects coming soon.</p>
+  </section>
+
+  <section class="section" id="contact">
+    <h2>Contact</h2>
+    <p>Email: <a href="mailto:mythrimyadav@gmail.com">mythrimyadavl@gmail.com</a></p>
+    <p>WhatsApp: <a href="https://wa.me/91+7676211739">Chat on WhatsApp</a></p>
+  </section>
+
   <footer>
-    © 2026 Mythri Web. All rights reserved.
+    <p>© 2026 Mythri Web. All rights reserved.</p>
   </footer>
 
 </body>
