--- a/index.html
+++ b/index.html
@@ -8,32 +8,49 @@
 </head>
 <body>
 
+  <!-- HERO SECTION -->
   <header class="hero">
     <h1>Mythri Web</h1>
-    <p>I build clean, responsive websites for startups and small businesses.</p>
+    <p>Professional Web Development Services</p>
+    <span class="tagline">Modern websites • Clean design • Fast delivery</span>
     <a href="#contact" class="btn">Contact Me</a>
   </header>
 
+  <!-- SERVICES -->
   <section class="section">
     <h2>Services</h2>
-    <ul>
+    <ul class="services">
       <li>Business Websites</li>
       <li>Portfolio Websites</li>
       <li>Landing Pages</li>
+      <li>Responsive Design</li>
     </ul>
   </section>
 
-  <section class="section">
+  <!-- PROJECTS -->
+  <section class="section alt">
     <h2>Projects</h2>
-    <p>Sample projects coming soon.</p>
+    <p>Sample projects will be added soon.</p>
   </section>
 
+  <!-- CONTACT -->
   <section class="section" id="contact">
-    <h2>Contact</h2>
-    <p>Email: <a href="mailto:mythrimyadav@gmail.com">mythrimyadavl@gmail.com</a></p>
-    <p>WhatsApp: <a href="https://wa.me/91+7676211739">Chat on WhatsApp</a></p>
+    <h2>Contact Me</h2>
+    <p>
+      Email:
+      <a href="mailto:mythrimyadav@gmail.com">
+        mythrimyadav@gmail.com
+      </a>
+    </p>
+    <p>
+      WhatsApp:
+      <a href="https://wa.me/917676211739" target="_blank">
+        Chat on WhatsApp
+      </a>
+    </p>
   </section>
 
+  <!-- FOOTER -->
   <footer>
     <p>© 2026 Mythri Web. All rights reserved.</p>
   </footer>
